[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-rate-limiter"
version = "0.1.0"
description = "Proactive rate limiting for LLM API calls — prevent 429 errors before they happen"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []   # zero external dependencies

keywords = [
    "llm", "rate-limiter", "openai", "anthropic", "gemini",
    "token-bucket", "sliding-window", "agent", "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
